# SherlockGPT

./: Just_a_new_file.txt  README.md  config.pickle  data_loader.ipynb  data_loader.py  input.txt  main.py  model.ipynb  model.py  pyproject.toml  train.ipynb  train.py
