[project]
name = "sherlockgpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "requests>=2.28.1",
    "torch>=2.13.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.1.6",
]
